--- a/staff/anibal-estrella/fullstack/project/api/package.json
+++ b/staff/anibal-estrella/fullstack/project/api/package.json
@@ -28,6 +28,7 @@
         "imagekit": "^5.0.0",
         "jsonwebtoken": "^9.0.0",
         "mongoose": "^8.3.3",
+        "node-fetch": "^3.3.2",
         "node-watch": "^0.7.3"
     }
 }
